// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matchs snapshot 1 1`] = `
<button
  className="button"
  data-testid="button"
  onClick={[MockFunction]}
  style={
    Object {
      "backgroundColor": "blue",
    }
  }
>
  click
</button>
`;

exports[`matchs snapshot 2 1`] = `
<button
  className="button"
  data-testid="button"
  onClick={[MockFunction]}
  style={
    Object {
      "backgroundColor": "green",
    }
  }
>
  save
</button>
`;
